Make review fixes